parser/src/parser/snapshots/parser__parser__classes__tests__parse_class_generic.snap
---
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  CLASS_DEF@[0; 20)
    CLASS_KW@[0; 5) "class"
    WHITESPACE@[5; 6) " "
    NAME@[6; 12)
      IDENT@[6; 12) "Result"
    TYPE_PARAM_LIST@[12; 17)
      L_ANGLE@[12; 13) "<"
      TYPE_PARAM@[13; 14)
        NAME@[13; 14)
          IDENT@[13; 14) "T"
      COMMA@[14; 15) ","
      TYPE_PARAM@[15; 16)
        NAME@[15; 16)
          IDENT@[15; 16) "E"
      R_ANGLE@[16; 17) ">"
    WHITESPACE@[17; 18) " "
    L_CURLY@[18; 19) "{"
    R_CURLY@[19; 20) "}"

