parser/src/parser/snapshots/parser__parser__classes__tests__parse_class_methods.snap
---
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 66)
  CLASS_DEF@[0; 66)
    CLASS_KW@[0; 5) "class"
    WHITESPACE@[5; 6) " "
    NAME@[6; 12)
      IDENT@[6; 12) "Person"
    WHITESPACE@[12; 13) " "
    L_CURLY@[13; 14) "{"
    WHITESPACE@[14; 15) " "
    NAMED_FIELD_DEF@[15; 27)
      NAME@[15; 19)
        IDENT@[15; 19) "name"
      COLON@[19; 20) ":"
      IDENT_TYPE@[20; 26)
        IDENT@[20; 26) "String"
      SEMI@[26; 27) ";"
    WHITESPACE@[27; 28) " "
    NAMED_FIELD_DEF@[28; 43)
      NAME@[28; 35)
        IDENT@[28; 35) "surname"
      COLON@[35; 36) ":"
      IDENT_TYPE@[36; 42)
        IDENT@[36; 42) "String"
      SEMI@[42; 43) ";"
    WHITESPACE@[43; 44) " "
    FN_DEF@[44; 65)
      FN_KW@[44; 46) "fn"
      WHITESPACE@[46; 47) " "
      NAME@[47; 50)
        IDENT@[47; 50) "new"
      PARAM_LIST@[50; 52)
        L_PAREN@[50; 51) "("
        R_PAREN@[51; 52) ")"
      WHITESPACE@[52; 53) " "
      RET_TYPE@[53; 63)
        FRETURN@[53; 55) "->"
        WHITESPACE@[55; 56) " "
        IDENT_TYPE@[56; 63)
          IDENT@[56; 62) "Person"
          WHITESPACE@[62; 63) " "
      BLOCK_EXPR@[63; 65)
        BLOCK@[63; 65)
          L_CURLY@[63; 64) "{"
          R_CURLY@[64; 65) "}"
    R_CURLY@[65; 66) "}"

