parser/src/parser/snapshots/parser__parser__classes__tests__parse_empty_class.snap
---
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 12)
  CLASS_DEF@[0; 12)
    CLASS_KW@[0; 5) "class"
    WHITESPACE@[5; 6) " "
    NAME@[6; 9)
      IDENT@[6; 9) "Foo"
    WHITESPACE@[9; 10) " "
    L_CURLY@[10; 11) "{"
    R_CURLY@[11; 12) "}"

