parser/src/parser/snapshots/parser__parser__classes__tests__parse_exported_class.snap
---
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 19)
  CLASS_DEF@[0; 19)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    CLASS_KW@[7; 12) "class"
    WHITESPACE@[12; 13) " "
    NAME@[13; 16)
      IDENT@[13; 16) "Foo"
    WHITESPACE@[16; 17) " "
    L_CURLY@[17; 18) "{"
    R_CURLY@[18; 19) "}"

